# Game-Of-Life

./: .gitignore  Makefile  README.md  pyproject.toml
src/: application.py  constants.py  main.py  test.py
src/controller/: controller_grid.py  controller_main_menu.py  grid_controller.py  main_controller.py  menu_controller.py  setting_controller.py  simulation_controller.py  welcom_controller.py  welcome_controller.py
src/gui/: test1.py
src/model/: Terrain.py  animal.py  animals.py  cell.py  elements.py  fauna.py  flora.py  fox.py  grid.py  plantes.py  rabbit.py  simulation.py
src/view/: grid_view.py  main_menu.py  setting_view.py  simulation_view.py  slider.py  welcom_view.py  welcome_view.py
